Modify some comments

--- a/stroke_prediction.ipynb
+++ b/stroke_prediction.ipynb
@@ -18,7 +18,7 @@
     "### 1. Data Set\n",
     "The data set is downloaded [here](https://www.kaggle.com/fedesoriano/stroke-prediction-dataset)\\.  \n",
     "According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately 11% of total deaths.  \n",
-    "The data set provides information about the patients like gender, age, various diseases, smoking status, and whether the patient get stroke.\n",
+    "The data set provides information about the patients like gender, age, various diseases, smoking status, and whether the patient have got stroke.\n",
     "\n",
     "### 2. Goal\n",
     "- Use the information of patients to predict whether a patient is likely to get stroke.\n",
@@ -325,7 +325,8 @@
    "metadata": {},
    "source": [
     "## 2. Exploratory Data Analysis\n",
-    "In this part, I will visualize the correlation between each paramater with the target column, in order to find some patterns."
+    "In this part, I will visualize the correlation between each paramater with the target column, in order to find some insights.  \n",
+    "ID is a unique identity of each record, but contains no information. Therefore we will not use it in prediction."
    ]
   },
   {
@@ -348,7 +349,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x29cd8cc9700>"
+       "<seaborn.axisgrid.FacetGrid at 0x21bb5d65e20>"
       ]
      },
      "execution_count": 6,
@@ -524,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distribution of age is nearly even. Age of 40-60 has slightly more records."
+    "The distribution of age is roughly even. Age of 40-60 has more records."
    ]
   },
   {
@@ -565,7 +566,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the plot, we can tell that starting from age of 40, older people have higher probability of getting stroke."
+    "Plot the proportion of people getting stroke at each age.  \n",
+    "We can find that starting from age of 40, older people have higher probability of getting stroke."
    ]
   },
   {
@@ -821,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Ever Married\" column are correlated with age, because older people are more likely to be married."
+    "\"Ever Married\" column is correlated with age, because older people are more likely to be married."
    ]
   },
   {
@@ -882,7 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because older people are more likely to get stroke, so we can also find that married people also have a higher proportion of getting stroke."
+    "Given that older people are more likely to get stroke, married people also have a higher proportion of getting stroke."
    ]
   },
   {
@@ -1215,7 +1217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the histogram of glucose level, we can find that the majority people have an average glucose level lower than 150. But some people have very high glucose level to about 250."
+    "From the histogram of glucose level, we can find that the majority people have an average glucose level lower than 150. But some people have high glucose level up to about 250."
    ]
   },
   {
@@ -1452,13 +1454,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The proportion of unknown smoking status: {smoking_counts[\"Unknown\"]/smoking_counts.sum():.2%}\n"
+      "The proportion of unknown smoking status: 30.22%\n"
      ]
     }
    ],
    "source": [
-    "print(f'The proportion of unknown smoking status: '\n",
-    "      '{smoking_counts[\"Unknown\"]/smoking_counts.sum():.2%}')"
+    "print('The proportion of unknown smoking status: '\n",
+    "      f'{smoking_counts[\"Unknown\"]/smoking_counts.sum():.2%}')"
    ]
   },
   {
@@ -1616,7 +1618,7 @@
    "metadata": {},
    "source": [
     "Now, the input variables are all numerical.  \n",
-    "We can set the input column names and target column name.  ID is a unique identity of each record, but contains no information, so we do not input this column."
+    "We can set the input column names and target column name."
    ]
   },
   {
@@ -1643,7 +1645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select 20% of the data as test set. Use stratified split to make the proportion of target class is the same in training and test set."
+    "Select 20% of the data as test set. Use stratified split to make the proportion of target class same in training and test set."
    ]
   },
   {
@@ -1689,7 +1691,7 @@
    "metadata": {},
    "source": [
     "Consider to fill the empty BMI with median value.  \n",
-    "To avoid the leakage of information from test set, we should use only compute the median value based on training set."
+    "To avoid leakage of information from test set, we should compute the median value only based on training set."
    ]
   },
   {
@@ -1724,8 +1726,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, all the input variables are numerical. We can use a compute the correlation matrix of all the features.  \n",
-    "From the matrix, we can see that age and ever married have a positive correlation."
+    "Now, all the input variables are numerical. We can compute the correlation matrix of all the features.  \n",
+    "From the matrix, we can see that age and ever married have a strong positive correlation."
    ]
   },
   {
@@ -1786,7 +1788,7 @@
    "metadata": {},
    "source": [
     "We need to normalize the data for PCA and model training. Here I will use min-max scaler.  \n",
-    "In order to prevent the information leakage from test set, min and max value should only be computed on training set."
+    "In order to prevent the information leakage from test set, min and max values should be computed only based on training set."
    ]
   },
   {
@@ -2178,7 +2180,7 @@
    "metadata": {},
    "source": [
     "Before we start training, we need to first balance our data.\n",
-    "That's because only 5% of the data is stroke, and that will influence our prediction accuracy.  \n",
+    "That's because only 5% of the data is stroke, which will influence our prediction.  \n",
     "Here I will use random duplication to over-sample the minority class."
    ]
   },
@@ -2322,7 +2324,7 @@
    "metadata": {},
    "source": [
     "Test the model with test set.  \n",
-    "The test set is imbalanced, so the precision of positive class is low. But both classes have recall more than 70%, which is much better than random guess."
+    "The test set is imbalanced, so the precision of positive class is low. But both classes have recall higher than 70%, which is much better than random guess."
    ]
   },
   {
@@ -3022,7 +3024,7 @@
    "metadata": {},
    "source": [
     "### 5.5 Neural Network\n",
-    "We use Keras to train a shallow neural network for prediction.  \n",
+    "Use Keras to train a shallow neural network for prediction.  \n",
     "Because the training time for neural network is long, I will only do the training on original feature data set."
    ]
   },
@@ -3062,7 +3064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because the training of neural network takes a lot of time, I just set the hyperparameter list simple."
+    "Because the training of neural network takes a long time, I just set the hyperparameter list simple."
    ]
   },
   {
@@ -3160,7 +3162,7 @@
    "source": [
     "From the table below, we can conclude that:\n",
     "- Except for decision tree, data set with original features performs better than PCA data sets. That's because the original dimension is small enough, while PCA may lose some information in the original data set.\n",
-    "- With the original features, neural network, random forest and logistic regression perform similarly. According to the report above, they all have an accuracy of about 73% and recall higher than 70% on both classes."
+    "- Neural network, random forest and logistic regression perform similarly with original features. According to the report above, they all have an accuracy of about 73% and recall higher than 70% in both classes."
    ]
   },
   {
@@ -3369,11 +3371,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above training, we can get a model to predict the stroke with about **73% accuracy** on test set.\n",
+    "From the above training, we can get a model to predict the stroke with about **73% accuracy** and **higher than 70% recall** on test set.\n",
     "\n",
     "Meanwhile, we also find some correlation between features and stroke:\n",
-    "- **Age** is the main driver to stroke. **Older people** are more likely to get a stroke, so we should take care of the health status of old people.\n",
-    "- People with **higher glucose level, hypertension and heart disease** are more likely to get a stroke. That means vascular disease can induce stroke."
+    "- **Age** is the main driver to stroke. **Older people** are more likely to get a stroke, so we should pay attention to the health status of old people.\n",
+    "- People with **higher glucose level, hypertension and heart disease** are more likely to get a stroke. That means vascular disease can induce stroke.\n",
+    "- People **never smoked** are slightly less likely to get stroke. It is always a good idea not to smoke."
    ]
   }
  ],
