--- a/stroke_prediction.ipynb
+++ b/stroke_prediction.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSA5201X Project: Stroke Prediction\n",
-    "Name: Cai Bowen  \n",
-    "Student Number: A0236104U"
+    "# DSA5201X Project: Stroke Prediction\n"
    ]
   },
   {
