--- a/stroke_prediction.ipynb
+++ b/stroke_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSA5201X Project: Stroke Prediction\n"
+    "# Stroke Prediction\n"
    ]
   },
   {
